# formatforge

./: CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: breaking_change.md  bug_report.md  dependency_updates.md  feature_request.md
.github/workflow/: ci.yaml
dbt_lint/: main.py  uppercase.py
formatforge/: main.py
tests/: test_uppercase.py
