[tool.poetry]
name = "dbt-lint"
version = "0.1.0"
description = "A simple linter for dbt projects"
authors = ["Rawlsy-py <christopher_m_mitchell@live.co.uk>"]
readme = "README.md"
packages = [{ include = "dbt_lint" }]

[tool.poetry.scripts]
dbt-lint = 'main:app'


[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
pydantic = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
ruff = "^0.0.79"
mypy = "^0.971"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
