[tool.poetry]
name = "formatforge"
version = "0.1.2"
description = "A simple linter for dbt projects"
authors = ["Rawlsy-py <christopher_m_mitchell@live.co.uk>"]
readme = "README.md"
packages = [{ include = "formatforge" }]

[tool.poetry.scripts]
formatforge = "formatforge.main:app"


[tool.poetry.dependencies]
python = "^3.11"
typer = { extras = ["all"], version = "^0.9.0" }
pydantic = "^2.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
